--- a/tweeker-web/public/index.html
+++ b/tweeker-web/public/index.html
@@ -29,7 +29,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="tweet-container"></div>
+    <div id="tweeker" data-username="justin" data-can-tweet="false"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -40,5 +41,19 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+      var path = window.location.pathname
+      var idRegex = /(?<tweetid>\d+)/
+      var match = path.match(idRegex)
+      if (match){
+        var tweetId = match.groups.tweetid
+        var tweekerEl = document.getElementById("tweeker")
+        tweekerEl.className = "d-none"
+        var tweetEl = `<div class="tweeker-detail" data-tweet-id=${tweetId} data-class-name="my-5 py-5 border bg-white text-dark"></div>`
+        var mainContainer = document.getElementById("tweet-container")
+        mainContainer.innerHTML = tweetEl
+        console.log(mainContainer)
+      }      
+    </script>
   </body>
 </html>
