--- a/tweeker-web/public/index.html
+++ b/tweeker-web/public/index.html
@@ -30,7 +30,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="tweet-container"></div>
-    <div id="tweeker" data-username="justin" data-can-tweet="false"></div>
+    <div id="tweeker" data-username="justin" data-can-tweet="true"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
