--- a/tweeker-web/public/index.html
+++ b/tweeker-web/public/index.html
@@ -29,8 +29,10 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="tweet-container"></div>
-    <div id="tweeker" data-username="justin" data-can-tweet="true"></div>
+    <div class="tweeker-profile-badge" data-username="justin"></div>
+    <div class="d-none" id="tweeker-feed"></div>
+    <div class="d-none" id="tweet-container"></div>
+    <div class="d-none" id="tweeker" data-username="justin" data-can-tweet="true"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
