change styles for showing tweets

--- a/tweeker-web/public/index.html
+++ b/tweeker-web/public/index.html
@@ -27,12 +27,12 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body class="bg-dark">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="tweeker-profile-badge" data-username="justin"></div>
+    <div class="d-none tweeker-profile-badge" data-username="justin"></div>
     <div class="d-none" id="tweeker-feed"></div>
-    <div class="d-none" id="tweet-container"></div>
-    <div class="d-none" id="tweeker" data-username="justin" data-can-tweet="true"></div>
+    <div id="tweet-container"></div>
+    <div id="tweeker" data-username="justin" data-can-tweet="true"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
