modified backend and frontend site of project

--- a/tweeker-web/public/index.html
+++ b/tweeker-web/public/index.html
@@ -29,10 +29,11 @@
   </head>
   <body class="bg-dark">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="d-none tweeker-profile-badge" data-username="justin"></div>
+    <div class="d-none tweeker-profile-badge" data-username="admin"></div>
     <div class="d-none" id="tweeker-feed"></div>
     <div id="d-none tweet-container"></div>
-    <div id="tweeker" data-username="justin" data-can-tweet="true"></div>
+    <div class="tweeker-detail" data-tweet-id=215></div>
+    <div id="d-none tweeker" data-username="admin" data-can-tweet="true"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -43,19 +44,20 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script>
+    <!-- <script>
       var path = window.location.pathname
       var idRegex = /(?<tweetid>\d+)/
       var match = path.match(idRegex)
-      console.log(match)
       if (match){
         var tweetId = match.groups.tweetid
+        
         var tweekerEl = document.getElementById("tweeker")
         tweekerEl.className = "d-none"
-        var tweetEl = `<div class="tweeker-detail" data-tweet-id=${tweetId} data-class-name="my-5 col-8 mx-auto col-md-6 py-5 bg-dark text-white"></div>`
-        var mainContainer = document.getElementById("tweet-container")
+        
+        var tweetEl = `<div class="tweeker-detail" data-tweet-id=${tweetId}></div>`
+        var mainContainer = document.getElementById("tweet-detail")
         mainContainer.innerHTML = tweetEl
       }      
-    </script>
+    </script> -->
   </body>
 </html>
